--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.11</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231017-153955</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231018-152729</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1057,9 +1057,7 @@
                               <th>Regels</th>
                               <td>
                                  
-                                 <p>Het gegeven moet ontbreken wanneer de eigenaar geen identificatie als onderneming
-                                    in het Handelsregister heeft.<br clear="none">
-                                    De organisatie moet binnen de basisregistratie ondergrond bekend zijn als eigenaar
+                                 <p>De organisatie moet binnen de basisregistratie ondergrond bekend zijn als eigenaar
                                     van grondwatermonitoringputten.</p>
                                  </td>
                            </tr>
@@ -1068,10 +1066,16 @@
                               <td>Ja</td>
                            </tr>
                            <tr>
+                              <th>Mogelijk geen waarde</th>
+                              <td>Ja</td>
+                           </tr>
+                           <tr>
                               <th>Reden geen waarde</th>
                               <td>
                                  
-                                 <p>Voor IMBRO/A-gegevens mag de waarde ontbreken wanneer de eigenaar niet bekend is.</p>
+                                 <p>De waarde moet ontbreken wanneer de eigenaar geen identificatie als onderneming in
+                                    het Handelsregister heeft.<br clear="none">
+                                    Voor IMBRO/A-gegevens mag de waarde ontbreken wanneer de eigenaar niet bekend is.</p>
                                  </td>
                            </tr>
                            <tr>
@@ -1272,7 +1276,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77699e4902">
+                  <section id="detail_d77699e4911">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1311,7 +1315,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77699e5087">
+                  <section id="detail_d77699e5096">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1349,7 +1353,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77699e5272">
+                  <section id="detail_d77699e5281">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1388,7 +1392,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77699e5457">
+                  <section id="detail_d77699e5466">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1426,7 +1430,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77699e5642">
+                  <section id="detail_d77699e5651">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2366,7 +2370,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77699e8739">
+                  <section id="detail_d77699e8748">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3653,6 +3657,10 @@
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
+                              <td>Ja</td>
+                           </tr>
+                           <tr>
+                              <th>Mogelijk geen waarde</th>
                               <td>Ja</td>
                            </tr>
                            <tr>
