--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1033,9 +1033,7 @@
                      <th>Regels</th>
                      <td>
                         
-                        <p>Het gegeven moet ontbreken wanneer de eigenaar geen identificatie als onderneming
-                           in het Handelsregister heeft.<br clear="none">
-                           De organisatie moet binnen de basisregistratie ondergrond bekend zijn als eigenaar
+                        <p>De organisatie moet binnen de basisregistratie ondergrond bekend zijn als eigenaar
                            van grondwatermonitoringputten.</p>
                         </td>
                   </tr>
@@ -1044,10 +1042,16 @@
                      <td>Ja</td>
                   </tr>
                   <tr>
+                     <th>Mogelijk geen waarde</th>
+                     <td>Ja</td>
+                  </tr>
+                  <tr>
                      <th>Reden geen waarde</th>
                      <td>
                         
-                        <p>Voor IMBRO/A-gegevens mag de waarde ontbreken wanneer de eigenaar niet bekend is.</p>
+                        <p>De waarde moet ontbreken wanneer de eigenaar geen identificatie als onderneming in
+                           het Handelsregister heeft.<br clear="none">
+                           Voor IMBRO/A-gegevens mag de waarde ontbreken wanneer de eigenaar niet bekend is.</p>
                         </td>
                   </tr>
                   <tr>
@@ -1248,7 +1252,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77699e4902">
+         <section id="detail_d77699e4911">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1287,7 +1291,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77699e5087">
+         <section id="detail_d77699e5096">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1325,7 +1329,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77699e5272">
+         <section id="detail_d77699e5281">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1364,7 +1368,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77699e5457">
+         <section id="detail_d77699e5466">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1402,7 +1406,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77699e5642">
+         <section id="detail_d77699e5651">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2342,7 +2346,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77699e8739">
+         <section id="detail_d77699e8748">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3629,6 +3633,10 @@
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
+                     <td>Ja</td>
+                  </tr>
+                  <tr>
+                     <th>Mogelijk geen waarde</th>
                      <td>Ja</td>
                   </tr>
                   <tr>
