Extra paragraaf toegevoegd aan Verkenning m.b.t. meerdere verkenningen. N.b. Bregje raadde in haar (ongevraagde) review wel aan om dit te benoemen, maar het kwam niet meer terug in haar suggestie. Daarom alsnog maar toegevoegd.

--- a/data/Belangrijkste entiteiten.html
+++ b/data/Belangrijkste entiteiten.html
@@ -95,6 +95,7 @@
 			<h4>Verkenning</h4>
 			<p>Een grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenningen, dat is een booronderzoek (BHR) of een sondeeronderzoek (CPT) uit het domein bodem- en grondonderzoek. Met het vastleggen van de gerelateerde verkenningen kan een gebruiker makkelijker achterhalen wat bijvoorbeeld de opbouw en samenstelling van de ondergrond is op de plaats van de grondwatermonitoringput, hoe diep er geboord  is of welk aanvulmateriaal rondom de put gebruikt is.</p>
 			<p>Het gaat specifiek om de verkenningen die direct gerelateerd zijn aan de inrichting van de grondwatermonitoringput, en dat zijn de booronderzoeken gerelateerd aan het boorgat waar de put in is ingericht of de sondering waarmee de put de grond is ingedrukt.</p>
+			<p>Er kunnen meerdere verkenningen zijn. Het is bijvoorbeeld denkbaar dat een booronderzoek vanuit meerdere vakgebieden wordt geproduceerd.</p>
 		</section>
 	</body>
 </html>
