--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -14,8 +14,8 @@
    </head>
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
-      <p>Imvertor: Nightly-build.11</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231103-101453</p>
+      <p>Imvertor: 3.0.0</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231103-103940</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -254,7 +254,17 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>KvK-nummer</td>
+                              <td>
+                                 KvK-nummer
+                                 </td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Code</td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Opbouw</th>
+                              <td>NNNNNNNN</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -1276,7 +1286,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77691e4908">
+                  <section id="detail_d77688e4908">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1315,7 +1325,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77691e5093">
+                  <section id="detail_d77688e5093">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1353,7 +1363,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77691e5278">
+                  <section id="detail_d77688e5278">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1392,7 +1402,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77691e5463">
+                  <section id="detail_d77688e5463">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1430,7 +1440,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77691e5648">
+                  <section id="detail_d77688e5648">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2370,7 +2380,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77691e8745">
+                  <section id="detail_d77688e8745">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5795,6 +5805,25 @@
                               
                               <p>De grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
                                  Ieder relevante type verkenning is vastgelegd als aparte keuze.</p>
+                              </td>
+                        </tr>
+                        <tr>
+                           <th>Toelichting</th>
+                           <td>
+                              
+                              <p>Enkel de verkenningen die direct gerelateerd zijn aan de inrichting van de grondwatermonitoringput
+                                 zijn in scope.
+                                 Er kunnen meerdere verkenningen zijn. Het is bijvoorbeeld denkbaar dat een booronderzoek
+                                 vanuit meerdere vakgebieden wordt geproduceerd.
+                                 Mogelijk zijn deze verkenningen niet altijd beschikbaar in de basisregistratie ondergrond.
+                                 Bijvoorbeeld doordat het proces van boorbeschrijven nog op zich laat wachten, of vanwege
+                                 het ontbreken van de geëigende booronderzoek (BHR) standaard.
+                                 Voor nieuw te registreren grondwatermonitoringputten, is het verplicht om de gerelateerde
+                                 verkenningen te registreren. Dit geldt uiteraard alleen indien deze verkenningen beschikbaar
+                                 zijn, of later beschikbaar komen, in de basisregistratie ondergrond. 
+                                 Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie
+                                 ondergrond, kunnen de gerelateerde verkenningen, indien gewenst, achteraf worden toegevoegd.
+                                 </p>
                               </td>
                         </tr>
                      </tbody>
