Aanpassingen GMW catalogus H3 n.a.v. review Bregje; H3, titel aangepast van 'Grondwatermonitoringput - algemene inleiding' naar 'Grondwatermonitoring' H3 en H1 (interne linkage), section id aangepast van 'Grondwatermonitoringput - algemene inleiding' naar 'Grondwatermonitoring'. H4.1.1, titel 'Grondwatermonitoringput algemeen' gewijzigd naar 'Grondwatermonitoringput'
H3.1, titel aangepast van 'Grondwatermonitoring' naar 'Inleiding'
H3.1, paragraaf 4, Link verwijderd van 'Besluit basisregistratie ondergrond' (nu als platte tekst opgenomen)
H3.1, paragraaf 6 (over milieukwaliteiten), Oude paragraaf vervangen door nieuwe paragraaf (input Erik bij BROSVO-1680).
H3.2, titel aangepast van 'Domein grondwatermonitoring in de BRO' naar 'Registratieobjecten binnen het domein grondwatermonitoring'
H3.2, afkortingen en engelstalige beschrijvingen in eerste opsomming registratieobjecten en tweede geschrapt (n.a.v. review Bregje op H3 Grondwatermonitoring).
H3.2, Links naar catalogi aangepast naar gepubliceerde catalogi, en links naar gepubliceerde catalogi GAR, GLD en FRD toegevoegd (n.a.v. review Bregje op H3 Grondwatermonitoring).

--- a/data/GMW normatief, inleiding.html
+++ b/data/GMW normatief, inleiding.html
@@ -3,7 +3,7 @@
 		<h3>Inleiding</h4>
 		<p>De catalogus voor de grondwatermonitoringput beschrijft de gegevens die in de registratie ondergrond zijn opgenomen van putten die in het publieke domein worden gebruikt voor het monitoren van de hoeveelheid grondwater en de kwaliteit ervan.</p>
 		<section id="GMW omschrijving">
-			<h4>Grondwatermonitoringput algemeen</h4>
+			<h4>Grondwatermonitoringput</h4>
 			<p>Een grondwatermonitoringput is een constructie die op een specifieke locatie in Nederland is ingericht en die in een monitoringnet wordt gebruikt. De constructie wordt gewoonlijk gerealiseerd in een gat dat gemaakt is door in de ondergrond te boren. Veelal bestaat een put uit een samenstel van buizen dat aan het oppervlak wordt beschermd tegen invloeden van buitenaf (<a href="#Grondwatermonitoringput twee monitoringbuizen">figuur 2</a>). Via de buizen wordt het grondwater dat zich op een bepaalde diepte bevindt ontsloten. Het deel van de buis waardoor het grondwater binnen kan komen is het filter. Een filter fungeert als meetpunt in een grondwatermonitoringnet. Aan een buis kunnen een of meer geo-ohmkabels zijn bevestigd. Dat zijn kabels die voorzien zijn van elektroden die gebruikt worden om bijvoorbeeld het zoutgehalte van het water te kunnen bepalen.</p>
 			
 			<figure id="Grondwatermonitoringput twee monitoringbuizen">
