--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 		<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'></section>
 		
 		<!-- 4.3 INSPIRE (INSPIRE-thema Geology) -->
-		<section id="INSPIRE" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/INSPIRE_Geology.html'></section>
-		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/INSPIRE_Geology.html'. -->
+		<section id="INSPIRE" data-include='./data/INSPIRE.html'></section>
 	</section>
 	
 	<!-- introductie gegevensdefinitie generiek -->
