--- a/data/INSPIRE.html
+++ b/data/INSPIRE.html
@@ -4,7 +4,7 @@
 		<p>Het doel van de Europese kaderrichtlijn <a href="https://inspire.ec.europa.eu/" target="_blank">INSPIRE</a> is het harmoniseren en openbaar maken van ruimtelijke gegevens van overheidsorganisaties ten behoeve van het milieubeleid.
 		   Het registratieobject grondwatermonitoringput is in het <a href="https://www.inspireaanmerking.nl/aanmerkingsregister" target="_blank">INSPIRE aanmerkingsregister</a> voor de INSPIRE Thema's Geologie (volgens het applicatie schema van Hydrogeologie) en Milieubewakingsvoorzieningen.
 		   Om deze reden moeten de gegevens in het registratieobject geschikt gemaakt worden voor uitwisseling volgens de INSPIRE-standaard.
-		   Dit wordt ge&iuml;mplementeerd middels een mapping van het gegevensmodel van het registratieobject grondwatermonitoringput op het gegevensmodel van deze INSPIRE themas.
+		   Dit wordt ge&iuml;mplementeerd middels een mapping van het gegevensmodel van het registratieobject grondwatermonitoringput op het gegevensmodel van deze INSPIRE thema's.
 		   De inhoud van deze mapping is geen onderdeel van deze catalogus.</p>
 	</body>
 </html>
