--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML><html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>Conceptual model/GMW conceptueel MIM/20190910</title>
+      <title>Conceptual model/GMW conceptueel MIM/20231103</title>
       <style>
                     table tbody tr th,
                     table tbody tr td {text-align: left; vertical-align: top;} 
@@ -13,9 +13,9 @@
                 </style>
    </head>
    <body>
-      <p>Conceptual model/GMW conceptueel MIM/20190910</p>
-      <p>Imvertor: 3.0.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231110-131722</p>
+      <p>Conceptual model/GMW conceptueel MIM/20231103</p>
+      <p>Imvertor: Nightly-build.13</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20231103-20231114-120429</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -62,7 +62,7 @@
          <section>
             <h2>Het domeinmodel</h2>
             <section>
-               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="655,14,928,189" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnish Sondeeronderzoek" coords="1331,637,1558,741" href="#global_class_Model_GeotechnishSondeeronderzoek"><area shape="rect" alt="Type Verkenning" coords="1118,615,1240,666" href="#global_class_Model_TypeVerkenning"><area shape="rect" alt="Booronderzoek" coords="1331,521,1558,625" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,806,1026,1106" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1175,808,1315" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1218,970,1546,1110" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1218,806,1435,910" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="562,246,1006,746" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="15,806,357,910" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="657,1368,925,1543" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="15,998,357,1152" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="780,1572,1015,1674" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
+               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="655,42,928,217" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnish Sondeeronderzoek" coords="1329,636,1556,740" href="#global_class_Model_GeotechnishSondeeronderzoek"><area shape="rect" alt="Type Verkenning" coords="1116,614,1238,665" href="#global_class_Model_TypeVerkenning"><area shape="rect" alt="Booronderzoek" coords="1329,520,1556,624" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,805,1025,1104" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1174,806,1313" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1216,969,1543,1108" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1216,805,1433,909" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="564,274,1006,725" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="15,805,356,909" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="656,1366,924,1541" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="15,996,356,1150" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="779,1569,1014,1672" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
                </div>
             </section>
          </section>
@@ -193,7 +193,17 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>KvK-nummer</td>
+                              <td>
+                                 KvK-nummer
+                                 </td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Code</td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Opbouw</th>
+                              <td>NNNNNNNN</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -1276,7 +1286,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d80028e5883">
+                  <section id="detail_d76760e5886">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1315,7 +1325,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d80028e6068">
+                  <section id="detail_d76760e6071">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1353,7 +1363,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d80028e6253">
+                  <section id="detail_d76760e6256">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1392,7 +1402,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d80028e6438">
+                  <section id="detail_d76760e6441">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1430,7 +1440,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d80028e6623">
+                  <section id="detail_d76760e6626">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2370,7 +2380,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d80028e9720">
+                  <section id="detail_d76760e9723">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5795,6 +5805,25 @@
                               
                               <p>De grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
                                  Ieder relevante type verkenning is vastgelegd als aparte keuze.</p>
+                              </td>
+                        </tr>
+                        <tr>
+                           <th>Toelichting</th>
+                           <td>
+                              
+                              <p>Enkel de verkenningen die direct gerelateerd zijn aan de inrichting van de grondwatermonitoringput
+                                 zijn in scope.
+                                 Er kunnen meerdere verkenningen zijn. Het is bijvoorbeeld denkbaar dat een booronderzoek
+                                 vanuit meerdere vakgebieden wordt geproduceerd.
+                                 Mogelijk zijn deze verkenningen niet altijd beschikbaar in de basisregistratie ondergrond.
+                                 Bijvoorbeeld doordat het proces van boorbeschrijven nog op zich laat wachten, of vanwege
+                                 het ontbreken van de geëigende booronderzoek (BHR) standaard.
+                                 Voor nieuw te registreren grondwatermonitoringputten, is het verplicht om de gerelateerde
+                                 verkenningen te registreren. Dit geldt uiteraard alleen indien deze verkenningen beschikbaar
+                                 zijn, of later beschikbaar komen, in de basisregistratie ondergrond. 
+                                 Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie
+                                 ondergrond, kunnen de gerelateerde verkenningen, indien gewenst, achteraf worden toegevoegd.
+                                 </p>
                               </td>
                         </tr>
                      </tbody>
