--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1262,7 +1262,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76709e5819">
+         <section id="detail_d76802e5819">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1301,7 +1301,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e6004">
+         <section id="detail_d76802e6004">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1339,7 +1339,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e6189">
+         <section id="detail_d76802e6189">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1378,7 +1378,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e6374">
+         <section id="detail_d76802e6374">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1416,7 +1416,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e6559">
+         <section id="detail_d76802e6559">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1455,7 +1455,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e6744">
+         <section id="detail_d76802e6744">
             <h4>  monitoringbuis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2368,7 +2368,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76709e9902">
+         <section id="detail_d76802e9902">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3945,7 +3945,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76709e15699">
+         <section id="detail_d76802e15699">
             <h4>  toegepast materiaal</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3992,7 +3992,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e15943">
+         <section id="detail_d76802e15943">
             <h4>  filter</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4044,7 +4044,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e16189">
+         <section id="detail_d76802e16189">
             <h4>  stijgbuisdeel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4098,7 +4098,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e16437">
+         <section id="detail_d76802e16437">
             <h4>  zandvang</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4145,7 +4145,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e16681">
+         <section id="detail_d76802e16681">
             <h4>  ingeplaatst deel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4192,7 +4192,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76709e16925">
+         <section id="detail_d76802e16925">
             <h4>  geo-ohmkabel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5056,7 +5056,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76709e20354">
+         <section id="detail_d76802e20354">
             <h4>  elektrode</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5575,6 +5575,7 @@
       </section>
       <section id="global_class_Model_Booronderzoek">
          <h3>   Booronderzoek</h3>
+         <div class="imageinfo "><img src="data/Images/EAID_34F08FB7_C362_437b_83B1_BA2A84EC8F3D.png" usemap="#imagemap-EAID_34F08FB7_C362_437b_83B1_BA2A84EC8F3D" alt="Diagram "></div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
             <colgroup style="width: 70%;"></colgroup>
@@ -5656,6 +5657,7 @@
       </section>
       <section id="global_class_Model_GeotechnishSondeeronderzoek">
          <h3>   Geotechnish Sondeeronderzoek</h3>
+         <div class="imageinfo "><img src="data/Images/EAID_7AF7F787_F8D5_4c23_B16A_E88820289747.png" usemap="#imagemap-EAID_7AF7F787_F8D5_4c23_B16A_E88820289747" alt="Diagram "></div>
          <table style="width: 100%;">
             <colgroup style="width: 30%;"></colgroup>
             <colgroup style="width: 70%;"></colgroup>
