Changed script end tag in attempt to restore catalogue generation.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico'/>
 		<link rel="stylesheet" type="text/css" href='https://docs.geostandaarden.nl/bro/gen/localstyle.css'/>
 		<title>BRO Gegevenscatalogus Grondwatermonitoringput</title>
-		<script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js' async />
-		<script class="remove" src="config.js"/>
+		<script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js' async></script>
+		<script class="remove" src="config.js"></script>
 	</head>
 	<body>
 		<!--samenvatting-->
