--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<!-- inleiding -->
 		<section id='inleiding' class='generic informative'>
 			<h2>Inleiding</h2>
-				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'/>
-				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'/>
-				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'/>
+				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
+				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
+				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
 				<section id="leeswijzer">
 					<h3>Leeswijzer</h3>
 						<p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
@@ -38,21 +38,21 @@
 
 		<!-- Algemene kenmerken en bergippen -->
 		<!-- hoofdstuk 2 -->
-		<section id='algemene-kenmerken-en-begrippen' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html' class='generic informative'/>
+		<section id='algemene-kenmerken-en-begrippen' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html' class='generic informative'></section>
 		<!-- NOTE, temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum. -->
 
 		<!-- 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
 		<section id="Grondwatermonitoring" class='generic informative'>
 			<h2>Grondwatermonitoring</h2>
 			<!-- 3.1 Inleiding -->
-			<section id="Grondwatermonitoring.Inleiding" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Grondwatermonitoring.html'/>
+			<section id="Grondwatermonitoring.Inleiding" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Grondwatermonitoring.html'></section>
 			<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
 			<!-- Note; Instead of the 'main URL' (https://github.com/BROprogramma/generiek/raw/gh-pages/gm/data/Grondwatermonitoring.html), the above 'redirect URL' is used (the main URL seems to redirect to this alternative 'https://raw.githubusercontent.com/...' URL).
 			Initially used the 'main URL' because for a PNG image within this data-include page, the 'redirect URL' didn't seem to work.
 			However, for this html document it seems that only the 'redirect URL' works and not the 'main URL'. Weird... -->
 			
 			<!-- 3.2 Registratieobjecten binnen het domein grondwatermonitoring -->
-			<section id="Grondwatermonitoring.Registratieobjecten" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Domein grondwatermonitoring in de BRO.html'/>
+			<section id="Grondwatermonitoring.Registratieobjecten" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/Domein grondwatermonitoring in de BRO.html'></section>
 			<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/Domein grondwatermonitoring in de BRO.html'. -->
 			
 			<!-- 3.3 Samenhang en consistentie tussen verschillende registratieobjecten in het Grondwaterdomein -->
@@ -64,49 +64,49 @@
 		<section id='Grondwatermonitoringput'>
 			<h2>Grondwatermonitoringput</h2>
 			<!-- 4.1 Inleiding -->
-			<section id='GMW inleiding' data-include='./data/GMW normatief, inleiding.html'/>
+			<section id='GMW inleiding' data-include='./data/GMW normatief, inleiding.html'></section>
 
 			<!-- 4.2 Belangrijkste entiteiten -->
-			<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'/>
+			<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'></section>
 
 			<!-- 4.3 INSPIRE (INSPIRE-thema Geology) -->
-			<section id="INSPIRE" data-include='./data/INSPIRE.html'/>
+			<section id="INSPIRE" data-include='./data/INSPIRE.html'></section>
 		</section>
 
 		<!-- introductie gegevensdefinitie generiek -->
 		<!-- hoofdstuk 5 -->
 		<section id="intro-gegevensdefinitie" class='generic informative'>
 			<h2>Opbouw van de gegevensdefinitie</h2>
-			<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"/>
+			<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
 			<section id="domeinen">
 				<h3>Domeinen</h3>
-				<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"/>
-				<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"/>
-				<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"/>
+				<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
+				<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
+				<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
 				<section id="gemeten waarden">
 					<h4>Gemeten waarden</h4>
-					<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"/>
-					<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"/>
-					<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"/>
+					<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
+					<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
+					<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div>
 				</section>
-				<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"/>
-				<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"/>
-				<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"/>
+				<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
+				<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>
+				<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
 				<section id="waardelijsten">
 					<h4>Waardelijsten</h4>
-					<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"/>
-					<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"/>
-					<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"/>
+					<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div>
+					<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
+					<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
 				</section>
-				<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"/>
-				<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"/>
+				<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
+				<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
 			</section>
-			<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"/>
-			<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"/>
+			<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
+			<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
 		</section>
 
 		<!-- Model -->
 		<!-- hoofdstuk 6 en Hoofdstuk 7 -->
-		<div data-include="data/GMW-cat.respec.html" data-include-replace=true/>
+		<div data-include="data/GMW-cat.respec.html" data-include-replace=true></div>
 	</body>
 </html>
