Changed INSPIRE reference.

--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
 		<!-- 4.2 Belangrijkste entiteiten -->
 		<section id='Belangrijkste entiteiten' data-include='./data/Belangrijkste entiteiten.html'></section>
 		
-		<!-- 4.3 INSPIRE (INSPIRE-thema Geology) -->
-		<section id="INSPIRE" data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/data/INSPIRE_Geology.html'></section>
-		<!-- (expected) link to location on docs.geostandaarden; 'https://docs.geostandaarden.nl/bro/gen/gm/data/INSPIRE_Geology.html'. -->
+			<!-- 4.3 INSPIRE (INSPIRE-thema Geology) -->
+			<section id="INSPIRE" data-include='./data/INSPIRE.html'></section>
 	</section>
 	
 	<!-- introductie gegevensdefinitie generiek -->
