Samenvatting, H1 en H2 teruggezet.

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 		<script class="remove" src="config.js"></script>
 	</head>
 	<body>
-	<!--samenvatting-->
-	<section id='abstract'>
-		<p>Dit document beschrijft de definitie van de grondwatermonitoringput, met een algemene toelichting. </p>
-	</section>
+		<!--samenvatting-->
+		<section id='abstract'>
+			<p>Dit document beschrijft de definitie van de grondwatermonitoringput, met een algemene toelichting.</p>
+		</section>
 
-	<!-- status document -->
-	<section id='sotd'></section>
+		<!-- status document -->
+		<section id='sotd'/>
 
-	<!-- inleiding -->
-	<section id='inleiding' class='generic informative'>
-		<h2>Inleiding</h2>
-			<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
-			<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
-			<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
-			<section id="leeswijzer">
-				<h3>Leeswijzer</h3>
-					<p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
-					<p><a href ="#algemene-kenmerken-en-begrippen">Hoofdstuk 2</a> behandelt enkele algemene aspecten van het BRO-systeem en begrippen van algemene aard.</p>
-					<p><a href ="#Grondwatermonitoring">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de gegevensdefinitie.</p>
-					<p><a href ="#Grondwatermonitoringput">Hoofdstuk 4</a> is de toelichting op de gegevensdefinitie van het registratieobject die in de ministeriële regeling is opgenomen.</p>
-					<p><a href ="#intro-gegevensdefinitie">Hoofdstuk 5</a> vertelt hoe de gegevensdefinitie is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
-					<p><a href ="#gegevensdefinitie">Hoofdstuk 6</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
-					<p><a href ="#uitbreidbare-waardelijsten">Hoofdstuk 7</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin uitbreidbare waardelijsten staan waarnaar in hoofdstuk 6 verwezen wordt. </p>
-			</section>
-	</section>
+		<!-- inleiding -->
+		<section id='inleiding' class='generic informative'>
+			<h2>Inleiding</h2>
+				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
+				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
+				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
+				<section id="leeswijzer">
+					<h3>Leeswijzer</h3>
+						<p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
+						<p><a href ="#algemene-kenmerken-en-begrippen">Hoofdstuk 2</a> behandelt enkele algemene aspecten van het BRO-systeem en begrippen van algemene aard.</p>
+						<p><a href ="#Grondwatermonitoring">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de gegevensdefinitie.</p>
+						<p><a href ="#Grondwatermonitoringput">Hoofdstuk 4</a> is de toelichting op de gegevensdefinitie van het registratieobject die in de ministeriële regeling is opgenomen.</p>
+						<p><a href ="#intro-gegevensdefinitie">Hoofdstuk 5</a> vertelt hoe de gegevensdefinitie is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
+						<p><a href ="#gegevensdefinitie">Hoofdstuk 6</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
+						<p><a href ="#uitbreidbare-waardelijsten">Hoofdstuk 7</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin uitbreidbare waardelijsten staan waarnaar in hoofdstuk 6 verwezen wordt.</p>
+				</section>
+		</section>
  
 	<!-- Algemene kenmerken en bergippen -->
 	<!-- hoofdstuk 2 -->
